# readonly-fs-tools

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
src/glob_grep_glance/: __init__.py  _budget.py  _defaults.py  _protocols.py  _sandbox.py  common.py  glance.py  glob.py  grep.py
src/readonly_fs_tools/: __init__.py  _defaults.py  _protocols.py  glob.py  grep.py  view.py
src/readonly_fs_tools/_internal/: __init__.py  file_reader.py  path_enumerator.py  regex_searcher.py
tests/: test_basic_instantiation.py  test_budget.py  test_file_reader.py  test_glancer_window_behavior.py  test_path_enumerator.py  test_protocols.py  test_public_api_integration.py  test_regex_searcher.py  test_sandbox.py  test_setup.py  test_viewer_window_behavior.py
