[project]
name = "glob_grep_glance"
version = "0.1.0"
description = "Three safe tools for agentic code analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[build-system]
requires = ["uv_build>=0.6.6,<0.7"]
build-backend = "uv_build"

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
