[project]
name = "readonly_fs_tools"
version = "0.2.0"
description = "Three safe tools for agentic code analysis"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Brett Harvey"}]
license = "MIT"
classifiers = []
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/rbharvs/readonly-fs-tools"
Changelog = "https://github.com/rbharvs/readonly-fs-tools/releases"
Issues = "https://github.com/rbharvs/readonly-fs-tools/issues"
CI = "https://github.com/rbharvs/readonly-fs-tools/actions"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[build-system]
requires = ["uv_build>=0.6.6,<0.7"]
build-backend = "uv_build"

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
